--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Find a list of National Parks to visit on your next vacation!</h1>
 
         <form id="js-form">
-            <label for="search-term">Search term</label>
-           <select id="js-search-state" required>
+            <label for="search-term">Select State - To choose multiple states hold down Ctrl or cmd</label>
+           <select id="js-search-state" required multiple>
 	<option value="AL">Alabama</option>
 	<option value="AK">Alaska</option>
 	<option value="AZ">Arizona</option>
